src/component/event_stream/snapshots/envision__component__event_stream__snapshot_tests__snapshot_disabled.snap
---
source: src/component/event_stream/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Event Stream (0 events) ─────────────────────────────────────────────────────┐
│Time         Lvl   Source     Message                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Filter: [/]  Level: ALL  Auto: ON
