src/component/event_stream/snapshots/envision__component__event_stream__snapshot_tests__snapshot_filtered.snap
---
source: src/component/event_stream/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Event Stream (4 events, showing 2) ──────────────────────────────────────────┐
│Time         Lvl   Source     Message                                         │
│1002.0       WRN   cache      Cache miss key=usr                              │
│1003.0       ERR   api        Timeout ms=5000                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Filter: [/]  Level: >=WRN  Auto: ON
