src/component/event_stream/snapshots/envision__component__event_stream__snapshot_tests__snapshot_with_title.snap
---
source: src/component/event_stream/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ System Events (3 events) ────────────────────────────────────────────────────┐
│Time         Lvl   Source     Message                                         │
│0.0          INF   -          Started successfully                            │
│0.0          WRN   -          High memory usage                               │
│0.0          ERR   -          Failed to connect                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Filter: [/]  Level: ALL  Auto: ON
